--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
