--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
